--- a/pagina-analise.html
+++ b/pagina-analise.html
@@ -35,8 +35,16 @@
         </nav>
     </header>
     
-    <h1 class="tituloDashboard fonte-titulo">Gráficos de analise</h1>
+    <h1 class="tituloDashboard fonte-titulo">Gráfico de análise</h1>
     <div style="width: 800px;"><canvas id="myChart" class="chartConfig "></canvas></div>
+    <ul class="label-dashboard">
+      <li class="label-listIten">Gás</li>
+      <li class="label-listIten">Bicicleta</li>
+      <li class="label-listIten">Encomenda</li>
+      <li class="label-listIten">Reclamações</li>
+      <li class="label-listIten">Temperatura</li>
+    </ul>
+
     <ul class="pagination menuGrafico">
         <li class="page-item"><a class="page-link" href="#">Anteriores</a></li>
         <li class="page-item"><a class="page-link" href="#">Janeiro</a></li>
