--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <!-- <i class="fa-solid fa-file-pdf"></i> -->
               <li><a class="nav-link"  href="#meus-condominios">Condominios</a></li>
               <li><a class="nav-link"  href="comunidade/comunidade.html">Comunidade</a></li>
+              <li><a class="nav-link"  href="pagina-analise.html">Gráficos</a></li>
               <li><a class="nav-link" data-bs-toggle="modal" data-bs-target="#modal-Contato" href="#">Notificações</a></li>
               <li><a class="nav-link" href="#">Sair</a></li>
             </ul>
@@ -151,6 +152,15 @@
               <h5 class="card-title text-center fs-3">Bike Elétrica</h5>
               <p class="card-text text-center text-wrap fs-5">Verifique o status das Bikes</p>
               <a href="bike-eletrica.html" class="btn botao-cor-especial fw-bold text-center">Ver Dados</a>
+            </div>
+          </article>
+
+          <article class="card borda-cor-especial p-0 m-4 card-largura col-12 cols-xxl-4">
+            <img src="src/lupa.png" class="card-img-top car-posicao-imagem" alt="icone do Registrar encomendas">
+            <div class="card-body">
+              <h5 class="card-title text-center fs-3">Grafico de analise</h5>
+              <p class="card-text text-center text-wrap fs-5">Acesse a area dos gráficos para ter uma análise</p>
+              <a href="pagina-analise.html" class="btn botao-cor-especial fw-bold text-center">Ver Dados</a>
             </div>
           </article>
             
